--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "using-univer-with-vue3",
   "description": "The example project of using Univer with Vue 3",
-  "version": "0.1.17",
+  "version": "0.2.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -15,17 +15,17 @@
     "pnpm": ">=7.0.0"
   },
   "dependencies": {
-    "@univerjs/core": "^0.1.17",
-    "@univerjs/design": "^0.1.17",
-    "@univerjs/docs": "^0.1.17",
-    "@univerjs/docs-ui": "^0.1.17",
-    "@univerjs/engine-formula": "^0.1.17",
-    "@univerjs/engine-render": "^0.1.17",
-    "@univerjs/sheets": "^0.1.17",
-    "@univerjs/sheets-formula": "^0.1.17",
-    "@univerjs/sheets-ui": "^0.1.17",
-    "@univerjs/ui": "^0.1.17",
-    "univer-chart-plugin": "^0.1.17",
+    "@univerjs/core": "^0.2.0",
+    "@univerjs/design": "^0.2.0",
+    "@univerjs/docs": "^0.2.0",
+    "@univerjs/docs-ui": "^0.2.0",
+    "@univerjs/engine-formula": "^0.2.0",
+    "@univerjs/engine-render": "^0.2.0",
+    "@univerjs/sheets": "^0.2.0",
+    "@univerjs/sheets-formula": "^0.2.0",
+    "@univerjs/sheets-ui": "^0.2.0",
+    "@univerjs/ui": "^0.2.0",
+    "@xxs3315/univer-chart-plugin": "^0.2.0",
     "vue": "^3.4.27"
   },
   "devDependencies": {
